Added _includes folder and started working on the header and footer files

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Main</title>
+    <title>{{title}}</title>
+    <script src="https://kit.fontawesome.com/9b8ef0615f.js"></script>
 </head>
 <body>
+    {% include header.html %}
     <h1>Main Test</h1>
     {{content}}
+    {% include footer.html %}
 </body>
+
 </html>
