--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,13 @@
+<div class="logo">
+    <a href="{{site.baseurl}}/">
+        <img src="../images/logo/logo.png" alt="Site logo">
+    </a>
+</div>
 <nav class="site-nav">
     <ul>
         {% assign nav = site.pages | sort:"order" %}
         {% for item in nav %}
-            {% if item.title and item.nomainnav != 1 %}    
+            {% if item.title %}    
             <li{% if item.url == page.url %} class="selected"{% endif %}>
                 <a href="{{ site.baseurl }}{{ item.url }}">
                     {% if item.icon %}<i class="fas {{ item.icon }}"></i>{% endif %}
@@ -12,6 +17,4 @@
             {% endif %}
         {% endfor %}
     </ul>
-
-    
 </nav>
