--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FilmRater {{page.title}}</title>
+    <title>FilmRater - {{page.title}}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 </head>
 <body>
     <div class="site">
         <header class="site-header">
-            <div class="logo">
-                <img src="../images/logo/logo.png" alt="Site logo">
-            </div>
-            {% include navigation.html location="header" %}
+            {% include header.html %}
         </header>
 
         <main class="site-main">
@@ -22,7 +19,7 @@
         </main>
 
         <footer class="site-footer">
-            {% include footer.html location="footer" %}
+            {% include footer.html %}
         </footer>
     </div>
 </body>
