--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,4 +1,5 @@
 @import url(./variables.css);
 @import url(./reset.css);
 @import url(./typography.css);
+@import url(./header.css);
 @import url(./footer.css);
