--- a/docs/css/typography.css
+++ b/docs/css/typography.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap');
 
 html{
-    font-size: 16px;
+    font-size: var(--site-base-font-size);
     line-height: 1.2;
-    font-family: 'PT Sans', sans-serif;
+    font-family: var(--site-content-font), sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-family: 'PT Serif', serif;
+    font-family: var(--site-headings-font), serif;
 }
 
 h1{font-size: 2.2rem;}
