--- a/_assets/css/typography.css
+++ b/_assets/css/typography.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap');
 
 html{
-    font-size: var(--site-base-font-size);
+    font-size: var(--site-font-size-mobile);
     line-height: 1.2;
     font-family: var(--site-content-font), sans-serif;
 }
@@ -16,3 +16,7 @@ h3{font-size: 1.8rem;}
 h4{font-size: 1.6rem;}
 h5{font-size: 1.4rem;}
 h6{font-size: 1.2rem;}
+
+@media ( min-width: 600px ) {
+    html { font-size: var(--site-font-size-larger); }
+}
