--- a/docs/css/variables.css
+++ b/docs/css/variables.css
@@ -1,7 +1,8 @@
 :root{
     --site-main-color: rgb(208, 25, 25);
     --site-second-color: rgb(255, 255, 255);
-    --site-base-font-size: 16px;
+    --site-font-size-mobile: 14px;
+    --site-font-size-larger: 16px;
     --site-content-font: 'PT Sans';
     --site-headings-font: 'PT Serif';
 }
