--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <div class="logo">
     <a href="{{site.baseurl}}/">
-        <img src="../images/logo/logo.png" alt="Site logo">
+        FilmRater
     </a>
+    <p class="slogan">Because we love films</p>
 </div>
 <nav class="site-nav">
     <ul>
