--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -2,10 +2,11 @@ header{
     padding: 2rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 header div.logo{
-    flex: 0 1 60%;
+    flex: 0 1 40%;
 }
 
 header div.logo a{
@@ -21,7 +22,7 @@ header div.logo p{
 }
 
 header nav{
-    flex: 0 0 40%;
+    flex: 0 0 50%;
     height: 100%;
     display: flex;
 }
@@ -36,7 +37,7 @@ header nav ul li{
     list-style: none;
     display: block;
     text-align: center;
-    flex: 0 0 20%;
+    flex: 0 0 18%;
 }
 
 header nav ul li a{
