--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,5 +1,6 @@
 @import url(./variables.css);
 @import url(./reset.css);
 @import url(./typography.css);
+@import url(./style.css);
 @import url(./header.css);
 @import url(./footer.css);
