--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,13 +4,9 @@
     display: none;
 }
 
-.site-main{
-    padding: 0 2rem;
-}
-
 .cta{
     text-align: center;
-    padding: 14rem 1rem;
+    padding: 14rem 3rem;
     background: url(https://heimkino-partner.de/wp-content/uploads/2016/12/gui-zappiti-movie-wall-en-1920x1080.jpg) center center;
     background-size: cover;
     position: relative;
@@ -71,6 +67,7 @@
     width: 70%;
     margin: 0 auto;
     margin-top: 6rem;
+    padding: 0 2rem;
 }
 
 .our-team h2{
@@ -153,3 +150,41 @@
 .our-team .media{
     background: #CCC;
 }
+
+.newsletter{
+    padding: 1rem;
+    background-color: var(--site-main-color);
+    text-align: center;
+    margin: 2rem 0;
+}
+
+.newsletter h2{
+    color: var(--site-second-color);
+    margin-bottom: 2rem;
+}
+
+.newsletter form p{
+    width: 30%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.newsletter form p input{
+    flex: 0 0 45%;
+    border-radius: 5px;
+}
+
+.newsletter form p input[type='email']{
+    padding: 0.4rem;
+}
+
+.newsletter form p input[type='submit']{
+    background: var(--site-second-color);
+    outline: none;
+    border: none;
+    color: var(--site-main-color);
+    font-weight: bold;
+    cursor: pointer;
+}
+
