--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,9 +1,3 @@
-
-
-.reviews-about-us{
-    display: none;
-}
-
 .cta{
     text-align: center;
     padding: 14rem 3rem;
@@ -64,31 +58,33 @@
 }
 
 .our-team{
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 6rem;
+    width: 80%;
+    margin: 6rem auto;
     padding: 0 2rem;
 }
 
-.our-team h2{
+.our-team h2,
+.reviews-about-us h2{
     text-align: center;
     font-size: 4rem;
     color: var(--site-main-color);
     margin-bottom: 0.5rem;
 }
 
-.our-team h3{
+.our-team h3,
+.reviews-about-us h3{
     text-align: center;
     margin-bottom: 3rem;
 }
 
-.our-team ul{
+.our-team ul,
+.reviews-about-us ul{
     display: flex;
     justify-content: space-evenly;
 }
 
 .our-team ul li{
-    flex: 0 0 24%;
+    flex: 0 0 22%;
     list-style: none;
 }
 
@@ -102,6 +98,8 @@
     overflow: hidden;
     position: relative;
     z-index: 1;
+    border-radius: 5px;
+    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
 }
 
 .our-team ul li .member .media:hover{
@@ -130,7 +128,9 @@
     z-index: 2;
     color: var(--site-second-color);
     opacity: 1;
+    text-align: center;
     width: 100%;
+    padding: 0 0.5rem;
 }
 
 .our-team ul li .member .media .info h2{
@@ -152,7 +152,7 @@
 }
 
 .newsletter{
-    padding: 1rem;
+    padding: 2rem 1rem;
     background-color: var(--site-main-color);
     text-align: center;
     margin: 2rem 0;
@@ -188,3 +188,49 @@
     cursor: pointer;
 }
 
+.reviews-about-us{
+    width: 80%;
+    margin: 6rem auto;
+}
+
+.reviews-about-us ul li{
+    text-align: center;
+    flex: 0 0 30%;
+    list-style: none;
+}
+
+.reviews-about-us .testimonial img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.reviews-about-us .testimonial .media{
+    overflow: hidden;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 100%;
+    margin: 2rem auto;
+    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+    position: relative;
+}
+
+.reviews-about-us .testimonial .media:after{
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.2);
+}
+
+.reviews-about-us .testimonial h4{
+   margin-bottom: 1rem;
+}
+
+.reviews-about-us .testimonial p{
+    font-style: italic;
+    font-size: 1.2rem;
+ }
