--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -38,16 +38,34 @@
     }
 }
 
-@media(max-width: 1200px){
-    .cta a,
-    header nav ul li{
-        opacity: 1;
+@keyframes changeColorMainToSecond{
+    0%{
+        background-color: var(--site-main-color);
+        color: var(--site-second-color);
+    }
+
+    100%{
+        background-color: var(--site-second-color);
+        color: var(--site-main-color);
+    }
+}
+
+@keyframes changeColorSecondToMain{
+    0%{
+        background-color: var(--site-second-color);
+        color: var(--site-main-color);
+    }
+
+    100%{
+        background-color: var(--site-main-color);
+        color: var(--site-second-color);
     }
 }
 
 /*Home page animations*/
 @media(min-width: 1200px){
     header nav ul li{
+        opacity: 0;
         animation: fadeInWithMovement 0.3s linear;
         animation-fill-mode: both;
     }
@@ -57,7 +75,18 @@
     header nav ul li:nth-child(3){animation-delay: 0.6s;}
     header nav ul li:nth-child(4){animation-delay: 0.9s;}
 
+    header nav ul li a{
+        animation: changeColorMainToSecond 0.3s linear;
+        animation-fill-mode: both;
+    }
+
+    header nav ul li a:hover{
+        animation: changeColorSecondToMain 0.3s linear;
+        animation-fill-mode: both;
+    }
+
     .cta a{
+        opacity: 0;
         animation: fadeIn 1.5s linear;
         animation-fill-mode: both;
         animation-delay: 1s;
