--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -26,7 +26,7 @@
     }
 }
 
-@keyframes fadeInWithMovement{
+@keyframes fadeInWithMovementAtRight{
     0%{
         opacity: 0;
         transform: translateX(-2rem);
@@ -66,7 +66,7 @@
 @media(min-width: 1200px){
     header nav ul li{
         opacity: 0;
-        animation: fadeInWithMovement 0.3s linear;
+        animation: fadeInWithMovementAtRight 0.3s linear;
         animation-fill-mode: both;
     }
 
@@ -75,12 +75,12 @@
     header nav ul li:nth-child(3){animation-delay: 0.6s;}
     header nav ul li:nth-child(4){animation-delay: 0.9s;}
 
-    header nav ul li a{
+    header nav ul li.animate a{
         animation: changeColorMainToSecond 0.3s linear;
         animation-fill-mode: both;
     }
 
-    header nav ul li a:hover{
+    header nav ul li.animate a:hover{
         animation: changeColorSecondToMain 0.3s linear;
         animation-fill-mode: both;
     }
@@ -103,4 +103,12 @@
         animation: fadeOut 0.8s linear;
         animation-fill-mode: both;
     }
+}
+
+/*About Page animations*/
+.about-filmRater h3{
+    opacity: 0;
+    animation: fadeIn 1.5s linear;
+    animation-fill-mode: both;
+    animation-delay: 0.9s;
 }
