--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -2,6 +2,7 @@
 @import url(./reset.css);
 @import url(./typography.css);
 @import url(./animations.css);
-@import url(./style.css);
+@import url(./home.css);
+@import url(./about.css);
 @import url(./header.css);
 @import url(./footer.css);
