--- a/docs/css/animations.css
+++ b/docs/css/animations.css
@@ -54,7 +54,7 @@
     }
 }
 
-@-webkit-keyframes fadeInWithMovement{
+@-webkit-keyframes fadeInWithMovementAtRight{
     0%{
         opacity: 0;
         transform: translateX(-2rem);
@@ -66,7 +66,7 @@
     }
 }
 
-@keyframes fadeInWithMovement{
+@keyframes fadeInWithMovementAtRight{
     0%{
         opacity: 0;
         transform: translateX(-2rem);
@@ -130,8 +130,8 @@
 @media(min-width: 1200px){
     header nav ul li{
         opacity: 0;
-        -webkit-animation: fadeInWithMovement 0.3s linear;
-                animation: fadeInWithMovement 0.3s linear;
+        -webkit-animation: fadeInWithMovementAtRight 0.3s linear;
+                animation: fadeInWithMovementAtRight 0.3s linear;
         -webkit-animation-fill-mode: both;
                 animation-fill-mode: both;
     }
@@ -141,14 +141,14 @@
     header nav ul li:nth-child(3){-webkit-animation-delay: 0.6s;animation-delay: 0.6s;}
     header nav ul li:nth-child(4){-webkit-animation-delay: 0.9s;animation-delay: 0.9s;}
 
-    header nav ul li a{
+    header nav ul li.animate a{
         -webkit-animation: changeColorMainToSecond 0.3s linear;
                 animation: changeColorMainToSecond 0.3s linear;
         -webkit-animation-fill-mode: both;
                 animation-fill-mode: both;
     }
 
-    header nav ul li a:hover{
+    header nav ul li.animate a:hover{
         -webkit-animation: changeColorSecondToMain 0.3s linear;
                 animation: changeColorSecondToMain 0.3s linear;
         -webkit-animation-fill-mode: both;
@@ -180,4 +180,15 @@
         -webkit-animation-fill-mode: both;
                 animation-fill-mode: both;
     }
+}
+
+/*About Page animations*/
+.about-filmRater h3{
+    opacity: 0;
+    -webkit-animation: fadeIn 1.5s linear;
+            animation: fadeIn 1.5s linear;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s;
 }
