--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -4,5 +4,6 @@
 @import url(./animations.css);
 @import url(./home.css);
 @import url(./about.css);
+@import url(./blog.css);
 @import url(./header.css);
 @import url(./footer.css);
