--- a/_assets/css/blog.css
+++ b/_assets/css/blog.css
@@ -1,5 +1,5 @@
 .blog{
-    width: 70%;
+    width: 60%;
     margin: 0 auto;
     padding: 2rem 0;
 }
@@ -27,6 +27,7 @@
 .post-title{
     color: var(--site-main-color);
     margin-bottom: 1rem;
+    text-decoration: underline;
 }
 
 .post-subtitle{
