--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -38,6 +38,18 @@
     }
 }
 
+@keyframes fadeInWithMovementAtLeft{
+    0%{
+        opacity: 0;
+        transform: translateX(2rem);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 @keyframes changeColorMainToSecond{
     0%{
         background-color: var(--site-main-color);
@@ -94,7 +106,7 @@
 
     .our-team ul li .member .media:after,
     .our-team ul li .member .media .info,
-    .post-header .post-media:after
+    .posts-headers .post .post-media:after
     {
         animation: fadeIn 0.6s linear;
         animation-fill-mode: both;
@@ -102,7 +114,7 @@
 
     .our-team ul li .member .media:hover:after,
     .our-team ul li .member .media:hover .info,
-    .post-header:hover .post-media:after{
+    .posts-headers .post:hover .post-media:after{
         animation: fadeOut 0.8s linear;
         animation-fill-mode: both;
     }
@@ -115,3 +127,24 @@
     animation-fill-mode: both;
     animation-delay: 0.9s;
 }
+
+.other-posts h2{
+    animation: fadeInWithMovementAtLeft 0.2s linear;
+    animation-fill-mode: both;
+    animation-delay: 1.2s;
+}
+
+.other-posts ul li{
+    animation: fadeInWithMovementAtLeft 0.2s linear;
+    animation-fill-mode: both;
+}
+
+.other-posts ul li:nth-child(1){ animation-delay: 1.4s; }
+.other-posts ul li:nth-child(2){ animation-delay: 1.6s; }
+.other-posts ul li:nth-child(3){ animation-delay: 1.8s; }
+.other-posts ul li:nth-child(4){ animation-delay: 2s; }
+.other-posts ul li:nth-child(5){ animation-delay: 2.2s; }
+.other-posts ul li:nth-child(6){ animation-delay: 2.4s; }
+.other-posts ul li:nth-child(7){ animation-delay: 2.6s; }
+.other-posts ul li:nth-child(8){ animation-delay: 2.8s; }
+.other-posts ul li:nth-child(9){ animation-delay: 3s; }
