Finished film genres page

--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -106,7 +106,9 @@
 
     .our-team ul li .member .media:after,
     .our-team ul li .member .media .info,
-    .posts-headers .post .post-media:after
+    .posts-headers .post .post-media:after,
+    .film-genres .media:after,
+    .film-genres .media h2
     {
         animation: fadeIn 0.6s linear;
         animation-fill-mode: both;
@@ -114,7 +116,9 @@
 
     .our-team ul li .member .media:hover:after,
     .our-team ul li .member .media:hover .info,
-    .posts-headers .post:hover .post-media:after{
+    .posts-headers .post:hover .post-media:after,
+    .film-genres a:hover .media h2,
+    .film-genres a:hover .media:after{
         animation: fadeOut 0.8s linear;
         animation-fill-mode: both;
     }
