--- a/docs/css/animations.css
+++ b/docs/css/animations.css
@@ -191,7 +191,9 @@
 
     .our-team ul li .member .media:after,
     .our-team ul li .member .media .info,
-    .posts-headers .post .post-media:after
+    .posts-headers .post .post-media:after,
+    .film-genres .media:after,
+    .film-genres .media h2
     {
         -webkit-animation: fadeIn 0.6s linear;
                 animation: fadeIn 0.6s linear;
@@ -201,7 +203,9 @@
 
     .our-team ul li .member .media:hover:after,
     .our-team ul li .member .media:hover .info,
-    .posts-headers .post:hover .post-media:after{
+    .posts-headers .post:hover .post-media:after,
+    .film-genres a:hover .media h2,
+    .film-genres a:hover .media:after{
         -webkit-animation: fadeOut 0.8s linear;
                 animation: fadeOut 0.8s linear;
         -webkit-animation-fill-mode: both;
