--- a/_assets/css/blog.css
+++ b/_assets/css/blog.css
@@ -57,6 +57,7 @@
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 0px 0px 18px 5px rgba(0,0,0,0.75);
+    margin-bottom: 2rem;
 }
 
 .post-media:after{
