--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -108,7 +108,8 @@
     .our-team ul li .member .media .info,
     .posts-headers .post .post-media:after,
     .film-genres .media:after,
-    .film-genres .media h2
+    .film-genres .media h2,
+    .film-card .film-card-media:after
     {
         animation: fadeIn 0.6s linear;
         animation-fill-mode: both;
@@ -118,7 +119,8 @@
     .our-team ul li .member .media:hover .info,
     .posts-headers .post:hover .post-media:after,
     .film-genres a:hover .media h2,
-    .film-genres a:hover .media:after{
+    .film-genres a:hover .media:after,
+    .film-card .film-card-media:hover:after{
         animation: fadeOut 0.8s linear;
         animation-fill-mode: both;
     }
