--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -5,6 +5,7 @@
 @import url(./home.css);
 @import url(./about.css);
 @import url(./film-genres.css);
+@import url(./films.css);
 @import url(./blog.css);
 @import url(./header.css);
 @import url(./footer.css);
