--- a/_layouts/film-genre.html
+++ b/_layouts/film-genre.html
@@ -23,8 +23,20 @@
                     <ul>
                         {% for filmPage in site.pages %}
                         {% if filmPage.genre and page.film-genre contains filmPage.genre %}
-                        <li>
-                            <a href="{{ site.baseurl }}{{ filmPage.permalink }}" class="film">{{ filmPage.film-title }}</a>
+                        <li class="film-card">
+                            <div class="film-card-media">
+                                <a href="{{ site.baseurl }}{{ filmPage.permalink }}">
+                                    <img src="{{ filmPage.image }}" alt="film poster image">
+                                </a>
+                            </div>
+                            <div class="film-card-content">
+                                <p class="title"><a href="{{ site.baseurl }}{{ filmPage.permalink }}">{{ filmPage.film-title }}</a><span> ({{ filmPage.year }})</span></p>
+                                <p class="duration"><span>Duration:</span> {{ filmPage.duration }}</p>
+                                <p class="rating"><i class="fas fa-star"></i> {{ filmPage.rating}} / 10</p>
+                                <p class="resume">{{ filmPage.resume }}</p>
+                                <p class="director"><span>Director:</span> {{ filmPage.director }}</p>
+                                <p class="stars"><span>Stars:</span> {{ filmPage.stars }}</p>
+                            </div>
                         </li>
                         {% endif %}
                         {% endfor %}
