Added a film layout and renamed all films from *.html to *.markdown

--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -6,6 +6,7 @@
 @import url(./about.css);
 @import url(./film-genres.css);
 @import url(./films.css);
+@import url(./film.css);
 @import url(./blog.css);
 @import url(./header.css);
 @import url(./footer.css);
