--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -6,6 +6,7 @@
 @import url(./about.css);
 @import url(./film-genres.css);
 @import url(./films.css);
+@import url(./film.css);
 @import url(./blog.css);
 @import url(./header.css);
 @import url(./footer.css);
