--- a/docs/css/film.css
+++ b/docs/css/film.css
@@ -2,10 +2,37 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 4rem;
+    grid-gap: 2rem;
     padding: 2rem 4rem;
 }
 
 .film{
     grid-row: 1 / span 3;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.film-page aside h2{
+    color: var(--site-main-color);
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.film-page aside ul li:not(:last-child){
+    margin-bottom: 1rem;
+}
+
+.film .heading{
+    grid-column: 1 / span 3;
+    grid-row: 1 / span 1;
+}
+
+.film iframe{
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+}
+
+.film .main-content{
+    grid-column: 1 / span 3;
+    grid-row: 3 / span 1;
 }
