--- a/_assets/css/animations.css
+++ b/_assets/css/animations.css
@@ -134,13 +134,15 @@
     animation-delay: 0.9s;
 }
 
-.other-posts h2{
+.other-posts h2,
+.other-films h2{
     animation: fadeInWithMovementAtLeft 0.2s linear;
     animation-fill-mode: both;
     animation-delay: 1.2s;
 }
 
-.other-posts ul li{
+.other-posts ul li,
+.other-films ul li{
     animation: fadeInWithMovementAtLeft 0.2s linear;
     animation-fill-mode: both;
 }
@@ -154,3 +156,14 @@
 .other-posts ul li:nth-child(7){ animation-delay: 2.6s; }
 .other-posts ul li:nth-child(8){ animation-delay: 2.8s; }
 .other-posts ul li:nth-child(9){ animation-delay: 3s; }
+
+
+.other-films ul li:nth-child(1){ animation-delay: 1.4s; }
+.other-films ul li:nth-child(2){ animation-delay: 1.6s; }
+.other-films ul li:nth-child(3){ animation-delay: 1.8s; }
+.other-films ul li:nth-child(4){ animation-delay: 2s; }
+.other-films ul li:nth-child(5){ animation-delay: 2.2s; }
+.other-films ul li:nth-child(6){ animation-delay: 2.4s; }
+.other-films ul li:nth-child(7){ animation-delay: 2.6s; }
+.other-films ul li:nth-child(8){ animation-delay: 2.8s; }
+.other-films ul li:nth-child(9){ animation-delay: 3s; }
