--- a/_assets/css/film.css
+++ b/_assets/css/film.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 2rem;
     padding: 2rem 4rem;
 }
 
@@ -10,6 +9,7 @@
     grid-row: 1 / span 3;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
 }
 
 .film-page aside h2{
@@ -25,6 +25,18 @@
 .film .heading{
     grid-column: 1 / span 3;
     grid-row: 1 / span 1;
+    text-align: center;
+}
+
+.film .heading h2{
+    font-size: 3rem;
+    color: var(--site-main-color);
+}
+
+.film .heading p{
+    color: var(--site-third-color);
+    font-size: 2rem;
+    font-weight: 900;
 }
 
 .film iframe{
@@ -33,6 +45,42 @@
 }
 
 .film .main-content{
-    grid-column: 1 / span 3;
+    grid-column: 2 / span 1;
     grid-row: 3 / span 1;
+}
+
+.film p{
+    font-size: 1.5rem;
+    line-height: 1.5;
+}
+
+.film .info{
+    margin-bottom: 4rem;
+}
+
+.film .info span{
+    color: var(--site-main-color);
+    font-weight: bold;
+}
+
+.film .info i{
+    color: var(--site-main-color);
+}
+
+.film .review h2{
+    text-align: center;
+    color: var(--site-main-color);
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.film .review .author{
+    margin-top: 3rem;
+    color: var(--site-main-color);
+    font-weight: bold;
+}
+
+.author span{
+    font-style: italic;
+    color: var(--site-third-color);
 }
