Moved to SCSS from CSS and changed films page header

--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -15,7 +15,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: -1;
 }
 
@@ -114,7 +114,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgb(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
     pointer-events: none;
 }
 
