--- a/_layouts/film-genre.html
+++ b/_layouts/film-genre.html
@@ -17,7 +17,7 @@
 
         <main class="site-main">
             <section class="films">
-                <h2>Films</h2>
+                <h2>{{ page.film-genre }}</h2>
         
                 <div class="content">
                     <ul>
