--- a/_assets/scss/_about.scss
+++ b/_assets/scss/_about.scss
@@ -7,31 +7,31 @@
     background-size: center;
     position: relative;
     z-index: 1;
-}
 
-.about-filmRater:after{
-    display: block;
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.5);
-    z-index: -1;
-}
+    &:after{
+        display: block;
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.5);
+        z-index: -1;
+    }
 
-.about-filmRater h2{
-    margin-bottom: 2rem;
-    font-size: 4rem;
-    color: var(--site-main-color);
-    z-index: 2;
-}
+    h2{
+        margin-bottom: 2rem;
+        font-size: 4rem;
+        color: var(--site-main-color);
+        z-index: 2;
+    }
 
-.about-filmRater h3{
-    color: var(--site-second-color);
-    line-height: 1.5;
-    z-index: 2;
+    h3{
+        color: var(--site-second-color);
+        line-height: 1.5;
+        z-index: 2;
+    }
 }
 
 .about{
@@ -40,63 +40,63 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-}
 
-.about .about-person{
-    flex: 0 0 100%;
-    display: flex;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-    overflow: hidden;
-}
+    .about-person {
+        flex: 0 0 100%;
+        display: flex;
+        justify-content: space-evenly;
+        border-radius: 5px;
+        box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+        overflow: hidden;
+    }
 
-.about .about-person:not(:last-child){
-    margin-bottom: 8rem;
-}
+    .about-person:not(:last-child){
+        margin-bottom: 8rem;
+    }
 
-.about .media{
-    overflow: hidden;
-    width: 70%;
-    max-width: 400px;
-    flex:  0 0 50%;
-}
+    .media{
+        overflow: hidden;
+        width: 70%;
+        max-width: 400px;
+        flex:  0 0 50%;
+    }
 
-.about img{
-    display: block;
-    width: 100%;
-    height: auto;
-}
+    img{
+        display: block;
+        width: 100%;
+        height: auto;
+    }
 
-.about .content{
-    flex: 1 1 50%;
-    padding: 2rem;
-    background-color: var(--site-main-color);
-    color: var(--site-second-color);
-    padding: 10% 2%;
-}
+    .content{
+        flex: 1 1 50%;
+        padding: 2rem;
+        background-color: var(--site-main-color);
+        color: var(--site-second-color);
+        padding: 10% 2%;
 
-.about .content h2{
-    font-size: 3rem;
-    text-align: center;
-    margin-bottom: 2rem;
-}
+        h2{
+            font-size: 3rem;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
 
-.about .content ul{
-    width: 60%;
-    margin: 0 auto;
-}
+        ul{
+            width: 60%;
+            margin: 0 auto;
+        }
 
-.about .content ul li{
-    list-style: none;
-    font-weight: 400;
-}
+        li{
+            list-style: none;
+            font-weight: 400;
 
-.about .content ul li:not(:last-child){
-    margin-bottom: 0.5rem;
-}
+            span{
+                font-weight: bold;
+                font-size: 1.2rem;
+            }
+        }
 
-.about .content ul li span{
-    font-weight: bold;
-    font-size: 1.2rem;
+        li:not(:last-child){
+            margin-bottom: 0.5rem;
+        }
+    }
 }
