--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -80,21 +80,20 @@
         opacity: 0;
         animation: fadeInWithMovementAtRight 0.3s linear;
         animation-fill-mode: both;
-    }
 
-    header nav ul li:first-child{animation-delay: 0s;}
-    header nav ul li:nth-child(2){animation-delay: 0.3s;}
-    header nav ul li:nth-child(3){animation-delay: 0.6s;}
-    header nav ul li:nth-child(4){animation-delay: 0.9s;}
+        @for $i from 0 through 3{
+            &:nth-child(#{$i+1}) { animation-delay: 0.3s * $i;}
+        }
+        
+        &.animate a{
+            animation: changeColorMainToSecond 0.3s linear;
+            animation-fill-mode: both;
 
-    header nav ul li.animate a{
-        animation: changeColorMainToSecond 0.3s linear;
-        animation-fill-mode: both;
-    }
-
-    header nav ul li.animate a:hover{
-        animation: changeColorSecondToMain 0.3s linear;
-        animation-fill-mode: both;
+            &:hover{
+                animation: changeColorSecondToMain 0.3s linear;
+                animation-fill-mode: both;
+            }
+        }
     }
 
     .cta a{
@@ -141,29 +140,20 @@
     animation-delay: 1.2s;
 }
 
-.other-posts ul li,
+.other-posts ul li{
+    animation: fadeInWithMovementAtLeft 0.2s linear;
+    animation-fill-mode: both;
+
+    @for $i from 1 through 9{
+        &:nth-child(#{$i}) { animation-delay: 1.2s + 0.2s * $i;}
+    }
+}
+
 .other-films ul li{
     animation: fadeInWithMovementAtLeft 0.2s linear;
     animation-fill-mode: both;
+
+    @for $i from 1 through 9{
+        &:nth-child(#{$i}) { animation-delay: 1.2s + 0.2s * $i;}
+    }
 }
-
-.other-posts ul li:nth-child(1){ animation-delay: 1.4s; }
-.other-posts ul li:nth-child(2){ animation-delay: 1.6s; }
-.other-posts ul li:nth-child(3){ animation-delay: 1.8s; }
-.other-posts ul li:nth-child(4){ animation-delay: 2s; }
-.other-posts ul li:nth-child(5){ animation-delay: 2.2s; }
-.other-posts ul li:nth-child(6){ animation-delay: 2.4s; }
-.other-posts ul li:nth-child(7){ animation-delay: 2.6s; }
-.other-posts ul li:nth-child(8){ animation-delay: 2.8s; }
-.other-posts ul li:nth-child(9){ animation-delay: 3s; }
-
-
-.other-films ul li:nth-child(1){ animation-delay: 1.4s; }
-.other-films ul li:nth-child(2){ animation-delay: 1.6s; }
-.other-films ul li:nth-child(3){ animation-delay: 1.8s; }
-.other-films ul li:nth-child(4){ animation-delay: 2s; }
-.other-films ul li:nth-child(5){ animation-delay: 2.2s; }
-.other-films ul li:nth-child(6){ animation-delay: 2.4s; }
-.other-films ul li:nth-child(7){ animation-delay: 2.6s; }
-.other-films ul li:nth-child(8){ animation-delay: 2.8s; }
-.other-films ul li:nth-child(9){ animation-delay: 3s; }
