--- a/_assets/scss/_film-genres.scss
+++ b/_assets/scss/_film-genres.scss
@@ -4,65 +4,65 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 4rem;
-}
 
-.film-genres .section-title{
-    grid-column: 1 / span 2;
-    font-size: 4rem;
-    color: var(--site-main-color);
-    text-align: center;
-}
+    .section-title{
+        grid-column: 1 / span 2;
+        font-size: 4rem;
+        color: var(--site-main-color);
+        text-align: center;
+    }
 
-.film-genres .content{
-    grid-column: 1 / span 2;
-}
+    .content{
+        grid-column: 1 / span 2;
+    }
 
-.film-genres .media{
-    overflow: hidden;
-    position: relative;
-    border-radius: 10px;
-    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-    z-index: -1;
-}
+    .media{
+        overflow: hidden;
+        position: relative;
+        border-radius: 10px;
+        box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+        z-index: -1;
 
-.film-genres .media h2{
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-    text-decoration: none;
-    color: var(--site-second-color);
-    font-size: 3rem;
-}
+        h2{
+            position: absolute;
+            bottom: 5%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2;
+            text-decoration: none;
+            color: var(--site-second-color);
+            font-size: 3rem;
+        }
 
-.film-genres .media:before{
-    display: block;
-    content: '';
-    padding-top: 56.25%;
-}
+        &:before{
+            display: block;
+            content: '';
+            padding-top: 56.25%;
+        }
 
-.film-genres .media:after{
-    display: block;
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-}
+        &:after{
+            display: block;
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 1;
+        }
+    }
 
-.film-genres img{
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 }
 
 .genres {
@@ -70,8 +70,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
     margin-bottom: 4rem;
-}
 
-.genres li{
-    list-style: none;
+    li{
+        list-style: none;
+    }
 }
