--- a/_assets/scss/_films.scss
+++ b/_assets/scss/_films.scss
@@ -1,13 +1,13 @@
 .films{
     width: 60%;
     margin: 0 auto;
-}
 
-.films h2{
-    text-align: center;
-    font-size: 4rem;
-    color: var(--site-main-color);
-    margin-bottom: 4rem;
+    h2{
+        text-align: center;
+        font-size: 4rem;
+        color: var(--site-main-color);
+        margin-bottom: 4rem;
+    }
 }
 
 .film-card{
@@ -20,72 +20,74 @@
     border-radius: 10px;
     padding: 2rem;
     box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-}
 
-.film-card .film-card-media{
-    overflow: hidden;
-    position: relative;
-    border-radius: 10px;
-    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-}
+    .film-card-media{
+        overflow: hidden;
+        position: relative;
+        border-radius: 10px;
+        box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
 
-.film-card .film-card-media:before{
-    display: block;
-    content: '';
-    padding: 75%;
-}
+        &:before{
+            display: block;
+            content: '';
+            padding: 75%;
+        }
 
-.film-card .film-card-media:after{
-    display: block;
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
-    pointer-events: none;
-}
+        &:after{
+            display: block;
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.5);
+            pointer-events: none;
+        }
+    }
 
-.film-card img{
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 
-.film-card .film-card-content .title{
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
+    .film-card-content{
+        .title{
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
 
-.film-card .film-card-content a{
-    text-decoration: none;
-    color: var(--site-main-color);
-}
+        a{
+            text-decoration: none;
+            color: var(--site-main-color);
 
-.film-card .film-card-content a:hover{
-    text-decoration: underline;
-}
+            &:hover{
+                text-decoration: underline;
+            }
+        }
 
-.film-card .film-card-content .rating{
-    margin-bottom: 2rem;
-}
+        .rating{
+            margin-bottom: 2rem;
+    
+            i{
+                color: var(--site-main-color);
+            }
+        }
+    }
 
-.film-card .film-card-content .rating i{
-    color: var(--site-main-color);
-}
+    span{
+        color: var(--site-main-color);
+        font-weight: bold;
+    }
 
-.film-card span{
-    color: var(--site-main-color);
-    font-weight: bold;
+    .title span{
+        color: var(--site-third-color);
+        font-weight: 500;
+    } 
 }
-
-.film-card .title span{
-    color: var(--site-third-color);
-    font-weight: 500;
-} 
