--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -5,52 +5,52 @@ footer{
     display: grid;
     grid-template-columns: [content-start] repeat(3, 1fr) [content-end];
     grid-template-rows: 100px 20px;
-}
 
-footer h2{
-    margin-bottom: 1.5rem;
-    text-align: center;
-    font-size: 1.6rem;
-}
+    h2{
+        margin-bottom: 1.5rem;
+        text-align: center;
+        font-size: 1.6rem;
+    }
 
-footer .footer-text{
-    text-align: center;
-}
+    .#{&}-text{
+        text-align: center;
 
-footer .footer-text h2{
-    margin-bottom: 0.5rem;
-}
+        h2{
+            margin-bottom: 0.5rem;
+        }
+    }
 
-footer .contact-us ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
+    .contact-us ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
 
-footer .contact-us ul li{
-    list-style: none;
-    flex: 0 0 45%;
-    text-align: center;
-}
+        li{
+            list-style: none;
+            flex: 0 0 45%;
+            text-align: center;
+        }
+    }
 
-footer .follow-us ul{
-    display: flex;
-    justify-content: center;
-}
+    .follow-us ul{
+        display: flex;
+        justify-content: center;
 
-footer .follow-us li{
-    list-style: none;
-    flex: 0 0 10%;
-    text-align: center;
-}
+        li{
+            list-style: none;
+            flex: 0 0 10%;
+            text-align: center;
+        }
 
-footer .follow-us li i{
-    color: var(--site-second-color);
-    font-size: 1.5rem;
-}
+        i{
+            color: var(--site-second-color);
+            font-size: 1.5rem;
+        }
+    }
 
-footer .rights{
-    text-align: center;
-    grid-column: content-start / content-end;
-    margin-bottom: 0;
+    .rights{
+        text-align: center;
+        grid-column: content-start / content-end;
+        margin-bottom: 0;
+    }
 }
