--- a/_assets/scss/_header.scss
+++ b/_assets/scss/_header.scss
@@ -3,54 +3,58 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    div.logo{
+        flex: 0 1 40%;
+
+        a{
+            text-decoration: none;
+            color: var(--site-main-color);
+            font-weight: bold;
+            font-family: 'PT Sans';
+            font-size: 2rem;
+        }
+
+        p{
+            color: var(--site-main-color);
+        }
+    }
+
+    nav{
+        flex: 0 0 50%;
+        height: 100%;
+        display: flex;
+
+        ul{
+            display: flex;
+            flex: 1 1 100%;
+            justify-content: space-evenly;
+        }
+
+        li{
+            list-style: none;
+            display: block;
+            text-align: center;
+            flex: 0 0 18%;
+        }
+
+        a{
+            text-decoration: none;
+            display: block;
+            color: var(--site-main-color);
+            font-size: 1.4rem;
+            padding: 0.5rem;
+            border: 2px solid var(--site-main-color);
+            border-radius: 10px;
+
+            &:hover{
+                background-color: var(--site-main-color);
+                color: var(--site-second-color);
+            }
+        }
+    }
 }
 
-header div.logo{
-    flex: 0 1 40%;
-}
-
-header div.logo a{
-    text-decoration: none;
-    color: var(--site-main-color);
-    font-weight: bold;
-    font-family: 'PT Sans';
-    font-size: 2rem;
-}
-
-header div.logo p{
-    color: var(--site-main-color);
-}
-
-header nav{
-    flex: 0 0 50%;
-    height: 100%;
-    display: flex;
-}
-
-header nav ul{
-    display: flex;
-    flex: 1 1 100%;
-    justify-content: space-evenly;
-}
-
-header nav ul li{
-    list-style: none;
-    display: block;
-    text-align: center;
-    flex: 0 0 18%;
-}
-
-header nav ul li a{
-    text-decoration: none;
-    display: block;
-    color: var(--site-main-color);
-    font-size: 1.4rem;
-    padding: 0.5rem;
-    border: 2px solid var(--site-main-color);
-    border-radius: 10px;
-}
-
-header nav ul li a:hover,
 .selected a{
     background-color: var(--site-main-color);
     color: var(--site-second-color);
